@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.6 2004/10/03 00:18:01 tv Exp $
+# $NetBSD: Makefile,v 1.7 2004/10/20 22:17:31 xtraeme Exp $
 
-DISTNAME=	wistumbler2.00-pre7
+DISTNAME=	wistumbler2.00-pre9
 PKGNAME=	${DISTNAME:S/wistumbler/wistumbler-/}
-PKGREVISION=	1
 CATEGORIES=	net
 MASTER_SITES=	ftp://ftp.nopcode.org/prj/wistumbler2/
 
@@ -11,12 +10,12 @@ HOMEPAGE=	http://www.nopcode.org/?t=wistumbler2
 COMMENT=	Fork of original WaveLAN/IEEE network stumbler
 
 USE_BUILDLINK3=	YES
-USE_X11=	YES
-GNU_CONFIGURE=	YES
+HAS_CONFIGURE=	YES
 MANCOMPRESSED=	YES
+CONFIGURE_ENV+=	PREFIX=${PREFIX}
 
 NOT_FOR_PLATFORM=	NetBSD-[01].[012345]*-*
-ONLY_FOR_PLATFORM=	NetBSD-*-* FreeBSD-*-*
+ONLY_FOR_PLATFORM=	NetBSD-*-* FreeBSD-*-* OpenBSD-*-*
 
 WISTUMBLER2_USES_GTK?=	yes
 
@@ -25,6 +24,7 @@ BUILD_DEFS+=		WISTUMBLER2_USES_GTK
 .include "../../mk/bsd.prefs.mk"
 
 .if !empty(WISTUMBLER2_USES_GTK:M[Yy][Ee][Ss])
+USE_X11=		yes
 .include "../../x11/gtk2/buildlink3.mk"
 .else
 CONFIGURE_ENV+=		USE_GTK=0
